src/objects/DAM_Brandstore_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>Batch_Size__c</fullName>
        <defaultValue>2000</defaultValue>
        <description>Enter a number between 1 and 2000</description>
        <label>Batch Size</label>
        <precision>4</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Brandstore_Image_Token__c</fullName>
        <defaultValue>&apos;Qbzrr3Nue4wvx4ysjrvfKGVPvC6KpHCh&apos;</defaultValue>
        <label>Brandstore Image Token</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Brandstore_Retrieval_Notification_Emails__c</fullName>
        <inlineHelpText>Comma separated emails. No spaces.</inlineHelpText>
        <label>Brandstore Retrieval Notification Emails</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Brandstore_Url__c</fullName>
        <defaultValue>&quot;https://download.pgbrandstoreqa2.com&quot;</defaultValue>
        <label>Brandstore Url</label>
        <required>true</required>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Dam_Image_Retrieval_Query__c</fullName>
        <description>Only add where clause. For example Last_Dam_Request__c = null. Single quotes need to be escaped. Leave empty for default query.</description>
        <label>Dam Image Retrieval Query</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>DAM Brandstore Settings</label>
</CustomObject>